Revert "feat: auto deploy"
This reverts commit c0b3c73929a09ac860c1d2b2b5e32c59649331ef.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-/node_modules
+node_modules
 *.log*
 .nuxt
 .nitro
@@ -6,10 +6,9 @@
 .output
 .env
 .DS_Store
-dist
+.idea
 yarn.lock
 
-*.log
 
 # local env files
 .env.local
