--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
+    "preview": "nuxt preview"
   },
   "devDependencies": {
     "@nuxtjs/dotenv": "^1.4.1",
@@ -19,7 +18,6 @@
     "eslint-plugin-import": "^2.23.3",
     "eslint-plugin-vue": "^7.0.0",
     "nuxt": "3.0.0-rc.1",
-    "push-dir": "^0.4.1",
     "typescript": "^4.6.4",
     "vite-plugin-eslint": "^1.6.0"
   },
